# GenAI-FastAPI-Boilerplate

./: .env.example  .gitignore  Dockerfile  docker-commands.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/callbacks/: handler.py
agents/callbacks/: handler.py
agents/rag/: agent.py  invoke_agent.py  models.py
agents/rag/prompts/: system_prompt.py
agents/rag/tools/: file_system_tools.py  tools_limits.py
api/ask/: routes.py  schemas.py
api/auth/: routes.py  schemas.py
api/chat/: routes.py  schemas.py
core/: clients.py  config.py  db_client.py  llm_factory.py  logger.py  utils.py
notebooks/: demo.ipynb
