[project]
name = "genai-backend"
version = "0.1.0"
description = "GenAI FastAPI boilerplate with LangChain, async DB, and structured logging"
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",

    # Settings / validation
    "pydantic[email]==2.11.4",
    "pydantic-settings==2.9.1",

    # HTTP client
    "httpx==0.28.1",

    # Auth
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",

    # Database (async SQLAlchemy — swap driver as needed)
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.31.0",

    # LangChain core (always required)
    "langchain-core==1.3.3",
    "langchain==1.2.18",
    "langgraph==1.1.10",

    # Env file loading
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
# Install only the provider(s) you use:
#   uv sync --extra bedrock
#   uv sync --extra openai
#   uv sync --extra anthropic
#   uv sync --extra bedrock --extra openai   (multiple)
bedrock   = ["langchain-aws==1.4.6",       "boto3==1.43.6"]
openai    = ["langchain-openai==1.2.1",   "openai==2.36.0"]
anthropic = ["langchain-anthropic==1.4.3", "anthropic==0.100.0"]

